tests/src/frontend/expand/invalid/bad_global_class_fun.sk
class Foo {
  fun .bad(): void { void }
}
